tree-sitter/grammar.js
    module: $ => repeat($._statement),

    // ---------------------------------------------------------------------
    // Statements
    // ---------------------------------------------------------------------

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // one or more simple statements on a logical line, terminated by a newline
    assignment: $ => prec.right(PREC.assign, seq(
      field('left', $._assign_lhs),
      '=',
      field('right', $._assign_rhs),
    )),

    augmented_assignment: $ => prec.right(PREC.assign, seq(
      field('left', $._assign_lhs),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '//=', '%=', '**=',
        '>>=', '<<=', '>>>=', '&=', '^=', '|=',
      )),
      field('right', $._assign_rhs),
    )),

    _assign_lhs: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _assign_rhs: $ => choice(
      $._expression,
      $.expression_list,
      $.yield,
    ),

    pattern_list: $ => prec.right(seq(
      $.pattern,
      choice(
        ',',
        seq(repeat1(seq(',', $.pattern)), optional(',')),
      ),
    )),

    pattern: $ => choice(
      $.identifier,
      $.this,
      $.attribute,
      $.subscript,
      $.tuple_pattern,
      $.list_pattern,
    ),

    tuple_pattern: $ => seq('(', optional($._pattern_seq), ')'),
    _pattern_seq: $ => seq(
      commaSep1($.pattern),
      optional(','),
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(choice($._expression, $.expression_list)),
    )),

    pass_statement: _ => 'pass',
    break_statement: _ => 'break',
    continue_statement: _ => 'continue',
    scoped_flag_statement: $ => seq(
      'from',
      '__python__',
      'import',
      choice(
        seq('(', $._flag_list, ')'),
        $._flag_list,
      ),
    ),

    _flag_list: $ => prec.right(seq(
      commaSep1(field('flag', $.identifier)),
      optional(','),
    )),

    if_statement: $ => seq(
      'if',
      field('condition', $._expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
    ),

    elif_clause: $ => seq(
      'elif',
      field('condition', $._expression),
      ':',
      field('consequence', $._suite),
    ),

    else_clause: $ => seq(
      'else',
      ':',
      field('body', $._suite),
    ),

    for_statement: $ => seq(
      'for',
      field('left', $._for_target),
      'in',
      field('right', choice($._expression, $.expression_list)),
      ':',
      field('body', $._suite),
      optional(field('alternative', $.else_clause)),
    ),

    _for_target: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    // native JavaScript for loop:  for v'i = 0; i < n; i++':
    for_js_statement: $ => seq(
      'for',
      field('condition', $.verbatim),
      ':',
      field('body', $._suite),
    ),

    while_statement: $ => seq(
      'while',
      field('condition', $._expression),
      ':',
      field('body', $._suite),
      optional(field('alternative', $.else_clause)),
    ),

    // do: ... .while cond
    do_statement: $ => seq(
      'do',
      ':',
      field('body', $._suite),
      '.',
      'while',
      field('condition', $._expression),
    ),

    try_statement: $ => seq(
      'try',
      ':',
      field('body', $._suite),
      choice(
        seq(
          repeat1($.except_clause),
          optional($.else_clause),
          optional($.finally_clause),
        ),
        $.finally_clause,
      ),
    ),

    except_clause: $ => seq(
      'except',
      optional(commaSep1($._expression)),
      optional(seq('as', field('alias', $.identifier))),
      ':',
      field('body', $._suite),
    ),

    finally_clause: $ => seq(
      'finally',
      ':',
      field('body', $._suite),
    ),

    with_statement: $ => seq(
      'with',
      commaSep1($.with_clause),
      ':',
      field('body', $._suite),
    ),

    with_clause: $ => seq(
      field('value', $._expression),
      optional(seq('as', field('alias', $._expression))),
    ),

    // ---- function & class definitions -----------------------------------

    function_definition: $ => seq(
      'def',
      field('name', $.identifier),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._expression))),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    _parameters: $ => seq(
      commaSep1($._parameter),
      optional(','),
    ),

    class_definition: $ => seq(
      'class',
      field('name', $.identifier),
      optional(field('superclasses', $.argument_list)),
      ':',
      field('body', $._suite),
    ),

    decorated_definition: $ => seq(
      repeat1($.decorator),
      field('definition', choice(
        $.function_definition,
        $.async_function_definition,
        $.class_definition,
      )),
    ),

    decorator: $ => seq(
      '@',
      $._expression,
      $._newline,
    ),

    // ---- suites / blocks -------------------------------------------------

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      $.block,
    ),

    block: $ => seq(
      $._indent,
      repeat($._statement),
      $._dedent,
    ),

    // ---------------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------------

    _expression: $ => choice(
      $._primary_expression,
      $.not_operator,
      $.boolean_operator,
      $.comparison_operator,
      $.binary_operator,
      $.unary_operator,
      $.conditional_expression,
      $.await,
      $.assignment,
      $.augmented_assignment,
    ),

    _primary_expression: $ => choice(
      $.identifier,
      $.this,
      $.true,
      $.false,
      $.none,
      $.number,
      $.string,
      $.concatenated_string,
      $.regex,
      $.verbatim,
      $.list,
      $.set,
      $.dictionary,
      $.tuple,
      $.parenthesized_expression,
      $.list_comprehension,
      $.set_comprehension,
      $.dictionary_comprehension,
      $.generator_expression,
      $.attribute,
      $.subscript,
      $.slice_call,
      $.call,
      $.new_expression,
      $.existential,
      $.anonymous_function,
    ),

    // ---- operators -------------------------------------------------------

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '^', PREC.bitwise_xor],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
        [prec.left, '>>>', PREC.shift],
      ];

      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    comparison_operator: $ => prec.left(PREC.compare, seq(
      $._expression,
      repeat1(seq(
        field('operator', choice(
          '<', '<=', '==', '===', '!=', '!==', '>=', '>',
          'in',
          seq('not', 'in'),
          'is',
          seq('is', 'not'),
          'instanceof',
        )),
        $._expression,
      )),
    )),

    // ternary conditional:  consequence if condition else alternative
    conditional_expression: $ => prec.right(PREC.conditional, seq(
      $._expression,
      'if',
      $._expression,
      'else',
      $._expression,
    )),

    // ---- postfix / primary chains ---------------------------------------

    attribute: $ => prec(PREC.member, seq(
      field('object', $._primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    call: $ => prec(PREC.call, seq(
      field('function', $._primary_expression),
      field('arguments', $.argument_list),
    )),

    // A slice used as a call argument (delslice etc.) is just a subscript;
    // this alias keeps the primary-expression choice list explicit.
    argument_list: $ => seq(
      '(',
      optional(choice(
        // a bare generator expression as the sole argument: f(x for x in y)
        seq(field('body', $._expression), $._comprehension_clauses),
        seq(commaSep1($._argument), optional(',')),
      )),
      ')',
    ),

    _argument: $ => choice(
      $._expression,
      $.keyword_argument,
      $.list_splat_argument,
      $.dictionary_splat_argument,
    ),

    // In a call, `name=value` is always a keyword argument (never an
    // assignment expression); the higher precedence enforces that.
    list_splat_argument: $ => seq('*', $._expression),
    existential: $ => prec.right(PREC.existential, seq(
      field('object', $._primary_expression),
      '?',
      optional(choice(
        seq('.', field('attribute', $.identifier)),
        seq('[', field('subscript', choice($._expression, $.slice)), ']'),
        field('arguments', $.argument_list),
        prec(-1, field('default', $._expression)),
      )),
    )),

    anonymous_function: $ => prec(PREC.lambda, seq(
      optional('async'),
      'def',
      optional(field('name', $.identifier)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._expression))),
      ':',
      field('body', $._anon_suite),
    )),

    // The body of an anonymous function. Unlike a statement-level suite, the
    // inline form is NOT terminated by a newline: an inline `def(): a; b`
    // appearing inside a container ends at the enclosing `,`/`}`/`)` (or the
    // outer statement's newline). Semicolons chain statements into the body.
    _anon_suite: $ => choice(
      $.block,
      alias($._inline_body, $.block),
    ),

    list: $ => seq(
      '[',
      optional(seq(commaSep1($._collection_element), optional(','))),
      ']',
    ),

    _collection_element: $ => choice(
      $._expression,
      $.list_splat_argument,
    ),

    set: $ => seq(
      '{',
      commaSep1($._collection_element),
      optional(','),
      '}',
    ),

    // A tuple is `()`, `(a,)`, or `(a, b, ...)`. A single element with no
    // trailing comma, `(a)`, is a parenthesized_expression (grouping) instead.
    tuple: $ => seq(
      '(',
      optional(choice(
        seq($._collection_element, ','),
        seq(
          $._collection_element,
          repeat1(seq(',', $._collection_element)),
          optional(','),
        ),
      )),
      ')',
    ),

    parenthesized_expression: $ => prec(1, seq(
      '(',
      choice($._expression, $.yield),
      ')',
    )),

    dictionary: $ => seq(
      '{',
      optional(seq(
        commaSep1(choice($.pair, $.dictionary_splat_argument)),
        optional(','),
      )),
      '}',
    ),

    pair: $ => seq(
      field('key', $._expression),
      ':',
      field('value', $._expression),
    ),

    // ---- comprehensions --------------------------------------------------

    list_comprehension: $ => seq(
      '[',
      field('body', $._expression),
      $._comprehension_clauses,
      ']',
    ),

    set_comprehension: $ => seq(
      '{',
      field('body', $._expression),
      $._comprehension_clauses,
      '}',
    ),

    dictionary_comprehension: $ => seq(
      '{',
      field('body', $.pair),
      $._comprehension_clauses,
      '}',
    ),

    generator_expression: $ => seq(
      '(',
      field('body', $._expression),
      $._comprehension_clauses,
      ')',
    ),

    _comprehension_clauses: $ => seq(
      $.for_in_clause,
      repeat(choice($.for_in_clause, $.if_clause)),
    ),

    for_in_clause: $ => seq(
      'for',
      field('left', $._for_target),
      'in',
      field('right', choice($._expression, $.expression_list)),
    ),

    if_clause: $ => seq(
      'if',
      $._expression,
    ),

    // ---- atoms / literals ------------------------------------------------

    this: _ => 'this',
    true: _ => 'True',
    false: _ => 'False',
    string: _ => token(seq(
      optional(/[rRuUfFbB]+/),
      choice(
        seq('"""', repeat(choice(/[^"\\]/, /\\(.|\n)/, /"[^"]/, /""[^"]/)), '"""'),
        seq("'''", repeat(choice(/[^'\\]/, /\\(.|\n)/, /'[^']/, /''[^']/)), "'''"),
        seq('"', repeat(choice(/[^"\\\n]/, /\\(.|\n)/)), '"'),
        seq("'", repeat(choice(/[^'\\\n]/, /\\(.|\n)/)), "'"),
      ),
    )),

    // verbatim JavaScript literal:  v'...'  v"..."  (optionally combined with
    // other string modifiers, e.g. rv'...'). At least one `v` is required.
    verbatim: _ => token(seq(
      /[rRuUfFbBvV]*[vV][rRuUfFbBvV]*/,
      choice(
        seq('"""', repeat(choice(/[^"\\]/, /\\(.|\n)/, /"[^"]/, /""[^"]/)), '"""'),
        seq("'''", repeat(choice(/[^'\\]/, /\\(.|\n)/, /'[^']/, /''[^']/)), "'''"),
        seq('"', repeat(choice(/[^"\\\n]/, /\\(.|\n)/)), '"'),
        seq("'", repeat(choice(/[^'\\\n]/, /\\(.|\n)/)), "'"),
      ),
    )),

    number: _ => {
      const hex = /0[xX][0-9a-fA-F]+/;
      const binary = /0[bB][01]+/;
      const octal = /0[oO][0-7]+/;
      const decimal = /(\d+\.?\d*|\.\d+)([eE][+-]?\d+)?/;
      return token(choice(hex, binary, octal, decimal));
    },

    identifier: _ => /[A-Za-z_$ª-￿][A-Za-z0-9_$ª-￿]*/,
